abovevtt.css
/* ... */
.dropdown-advantage {
    background-image: url(assets/conditons/advantage.png) !important;
}
.dropdown-baned {
    background-image: url(assets/conditons/baned.png) !important;
}
.dropdown-bardic {
    background-image: url(assets/conditons/bardic_inspiration.png) !important;
}
.dropdown-blessed{
    background-image: url(assets/conditons/blessed.png) !important;
}
.dropdown-bloodied {
    background-image: url(assets/conditons/bloodied.png) !important;
}
.dropdown-concentration-reminder {
    background-image: url(assets/conditons/concentration\(reminder\).png) !important;
}
.dropdown-disadvantage {
    background-image: url(assets/conditons/disadvantage.png) !important;
}
.dropdown-flamed {
    background-image: url(assets/conditons/flamed.png) !important;
}
.dropdown-flying {
    background-image: url(assets/conditons/flying.png) !important;
}
.dropdown-hasted {
    background-image: url(assets/conditons/hasted.png) !important;
}
.dropdown-bardic-inspiration {
    background-image: url(assets/conditons/bardic_inspiration.png) !important;
}
.dropdown-rage {
    background-image: url(assets/conditons/rage.png) !important;
}
.dropdown-remove {
    background-image: url(assets/icons/delete.svg) !important;
}
/* end quick roll menu */

/*Audio Mixer Start*/
li.audio-row:hover .channel-progress-bar-total .channel-progress-bar-progress,
li.audio-row:hover .channel-progress-bar-total
{
    height:5px !important;
}
.channel-progress-bar-total,
.channel-progress-bar-progress{
    transition: 150ms height linear 500ms;
}
#sounds-panel .channel-progress-bar-progress{
    background: #1b9af0 !important;
}

.token-image[src*='assets/icons/speaker.svg']{
    filter: invert(1) drop-shadow(1px 1px 0px #000) !important;
}
#sounds-panel .channel-progress-bar-total{
    width: 35%;
}
#sounds-panel .volume-control{
    width: 40%;
}
.audio-row input{
    top: 4px;
    position:relative;
    -webkit-appearance: none;
    width: 100%;
    height: 7px;
    border-radius: 5px;
    background: #d3d3d3;
    outline: none;

}
#mixer-channels .volume-control{
    left: 0;
    width: calc(40% + 2px)
}
#mixer-channels .audio-row input{
    top: 8px;
}
#mixer-channels .audio-row{
    margin-left: 5px;
}
.audio-row input::-webkit-slider-thumb{
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    width: 4px;
    height: 13px;
    background: #899197;
    background-color: #899197;
    border-radius:5px;
    cursor: pointer;
    box-shadow: 1px 1px 1px 0px #000;
    border:1px solid #fff9;
    border-width: 1px 0px 0px 1px;
}

.audio-row input::-moz-range-thumb {
-moz-appearance: none;
    appearance: none;
    width: 4px;
    height: 13px;
    background: #899197;
    background-color: #899197;
    border-radius:5px;
    cursor: pointer;
    box-shadow: 1px 1px 1px 0px #000;
    border:1px solid #fff9;
    border-width: 1px 0px 0px 1px;
}
#sounds-panel .sidebar-panel-header {
    background: #ebf1f5;
    color: #000;
}
#sounds-panel .sidebar-panel-header button{
    border-radius: 5px;
}
#sounds-panel .sidebar-panel-header button{
    box-shadow: inset 1px 1px 4px -2px #a0a0a0e3, 2px 2px 2px -1px #000000a3, 0px 1px 1px 0px #0006;
}
#sounds-panel .sidebar-panel-header button svg{
    transform: scale(0.8);
}
#sounds-panel .sidebar-panel-header button:active,
#sounds-panel .sidebar-panel-header button.pressed:active{
    box-shadow: inset 2px 1px 3px -1px #000, inset 1px 2px 3px -1px #000;
    border: 1px solid tranparent;
}

#sounds-panel .sidebar-panel-header svg path{
    fill: #000;
}
div#sounds-panel {
    overflow-y: visible;
}


button.channel-loop-button{
    left: 20px;
}

.channelNameOverflow {
    width: 100px;
    display: inline-block;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    height: 16px;
}
.channelNameOverflow:hover .channelName {
    margin-left: var(--name-width-overflow);
}

.channelName{
    transition: margin 800ms ease-in 250ms;
    text-overflow: ellipsis;
    display: inline;
}
#mixerPlaylists{
    width: 100px;
    margin: 0px 0px 0px 5px;
}
#mixerPlaylists ~ button#add-playlist, 
#mixerPlaylists ~ button#remove-playlist {
    box-shadow: 1px 1px 1px 1px #0003, 1px 2px 0px -2px #0003;
    border: 1px solid transparent;
    box-sizing: border-box;
    border-radius: 5px;
    width: fit-content;
    font-size: 12px;
    height: 16px;
    margin: 0px 4px;
    color: rgb(111, 116, 120);
    padding: 0px 3px;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
    color: #000000;
    opacity: 0.8;
    outline: none;
    background: rgb(235, 241, 245);
}   

.mixer-play-pause-button,
.track-play-pause-button,
.mixer-clear-button,
.channel-play-pause-button,
.channel-loop-button,
.track-remove-button,
.add-track-ok-button,
.add-track-cancel-button,
.channel-remove-button,
.track-add-to-mixer,
.track-add-token-mixer {
    box-shadow: 1px 1px 1px 1px #0003, 1px 2px 0px -2px #0003;
    border: 1px solid transparent;
    box-sizing: border-box;
    border-radius: 5px;
    width: 24px;
    height: 24px;
    color: rgb(111, 116, 120);
    padding: 0px 0px;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
    color: #000000;
    opacity: 0.8;
    outline: none;
    background: rgb(235, 241, 245);
    transform: scale(0.8);
}
.mixer-play-pause-button:focus,
.track-play-pause-button:focus,
.mixer-clear-button:focus,
.channel-play-pause-button:focus,
.channel-loop-button:focus,
.track-remove-button:focus,
.add-track-ok-button:focus,
.add-track-cancel-button:focus,
.channel-remove-button:focus,
.track-add-to-mixer:focus,
.track-add-token-mixer:focus {
    outline: none;
}
/* ... */

